[package]
name = "ibc-denom-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
cosmwasm-schema = "1.3.1"
thiserror = "1.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
serde-json-wasm = "0.5.1"
packet-forward = { path = "../packet-forward" }
