[package]
name = "ibc-denom-resolver"
version = {workspace = true}
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cosmwasm-schema = {workspace = true}
thiserror = {workspace = true}
cw-storage-plus = {workspace = true}
cw-utils = {workspace = true}
serde-json-wasm = {workspace = true}
packet-forward-types = {workspace = true}
