[package]
name = "ibc-denom-resolver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.3.2", features = ["stargate"] }
cosmwasm-schema = "1.3.1"
thiserror = "1.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
serde-json-wasm = "1.0.0"
packet-forward = { path = "../packet-forward" }
