[package]
name = "packet-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
serde = "1.0"
thiserror = "1.0"
cw-utils = "1.0.1"
cw-storage-plus =  "1.1.0"
prost = "0.11"
prost-types = "0.11"
