[package]
name = "packet-forward"
version = {workspace = true}
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-std = { wordspace = true, features = ["stargate"] }
cosmwasm-schema = { wordspace = true}
thiserror = { wordspace = true}
cw-storage-plus =  { wordspace = true}
cw-utils = { wordspace = true}
serde-json-wasm = { wordspace = true}
serde-cw-value = { wordspace = true}
prost = { wordspace = true}
prost-types = { wordspace = true}
packet-forward-types = {workspace = true}
